vlib/v/checker/tests/unknown_method.out
vlib/v/checker/tests/unknown_method.vv:13:12: error: unknown method or field: `Test.sdd`
   11 | fn main() {
   12 |     t := Test{}
   13 |     println(t.sdd())
      |               ~~~~~
   14 | 
   15 |     foo := new_foo[int]()
vlib/v/checker/tests/unknown_method.vv:13:2: error: `println` can not print void expressions
   11 | fn main() {
   12 |     t := Test{}
   13 |     println(t.sdd())
      |     ~~~~~~~~~~~~~~~~
   14 | 
   15 |     foo := new_foo[int]()
vlib/v/checker/tests/unknown_method.vv:16:6: error: unknown method or field: `Foo[F].bar`
   14 | 
   15 |     foo := new_foo[int]()
   16 |     foo.bar()
      |         ~~~~~
   17 | }
